--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>1.8.0._66</java.version>
 	</properties>
 
 	<dependencies>
@@ -93,6 +93,19 @@
 			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
+
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>2.3.2</version>
+			<configuration>
+				<source>${java.version}</source>
+				<target>${java.version}</target>
+				<showWarnings>true</showWarnings>
+			</configuration>
+		</plugin>
+	</plugins>
 
 	<build>
 		<plugins>
