--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,7 @@
 	<groupId>com.gaoxi</groupId>
 	<artifactId>gaoxi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<!--<packaging>jar</packaging>-->
-
-
-	<packaging>pom</packaging>
+	<packaging>war</packaging>
 
 	<name>Gaoxi</name>
 	<description>Demo project for Spring Boot</description>
