--- a/Gaoxi-Common-Service-Facade/pom.xml
+++ b/Gaoxi-Common-Service-Facade/pom.xml
@@ -15,5 +15,6 @@
 		<groupId>com.gaoxi</groupId>
 		<artifactId>gaoxi</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 </project>
