--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<groupId>com.gaoxi</groupId>
 	<artifactId>gaoxi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
 	<name>Gaoxi</name>
 	<description>Demo project for Spring Boot</description>
