--- a/Gaoxi-Common-Service-Facade/pom.xml
+++ b/Gaoxi-Common-Service-Facade/pom.xml
@@ -23,4 +23,12 @@
 		<!--<version>0.0.1-SNAPSHOT</version>-->
 		<!--<relativePath>../pom.xml</relativePath>-->
 	<!--</parent>-->
+
+	<dependencies>
+		<!-- Spring Boot -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+	</dependencies>
 </project>
