--- a/Gaoxi-Controller/src/main/resources/application.properties
+++ b/Gaoxi-Controller/src/main/resources/application.properties
@@ -1,5 +1,3 @@
 spring.dubbo.application.name=controller-consumer
-spring.dubbo.registry.address=zookeeper://192.168.99.100:2182
+spring.dubbo.registry.address=192.168.99.100:2182
 spring.dubbo.scan=com.controller
-
-spring.profiles.active=@profileActive@
