--- a/Gaoxi-User/src/main/resources/application.properties
+++ b/Gaoxi-User/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.dubbo.application.name=user-provider
-spring.dubbo.registry.address=zookeeper://192.168.99.100:2182
+spring.dubbo.registry.address=192.168.99.100:2182
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20883
 spring.dubbo.scan=com.user
-
-spring.profiles.active=@profileActive@
