--- a/pom.xml
+++ b/pom.xml
@@ -51,17 +51,17 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- MyBatis -->
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>1.3.1</version>
-		</dependency>
-		<!-- Mysql -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.mybatis.spring.boot</groupId>-->
+			<!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
+			<!--<version>1.3.1</version>-->
+		<!--</dependency>-->
+		<!--&lt;!&ndash; Mysql &ndash;&gt;-->
+		<!--<dependency>-->
+			<!--<groupId>mysql</groupId>-->
+			<!--<artifactId>mysql-connector-java</artifactId>-->
+			<!--<scope>runtime</scope>-->
+		<!--</dependency>-->
 		<!-- Dubbo -->
 		<dependency>
 			<groupId>io.dubbo.springboot</groupId>
@@ -101,8 +101,10 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.codehaus.cargo</groupId>
-				<artifactId>cargo-maven2-plugin</artifactId>
+				<!--<groupId>org.codehaus.cargo</groupId>-->
+				<!--<artifactId>cargo-maven2-plugin</artifactId>-->
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<container>
 						<!-- 指明使用的tomcat服务器版本 -->
@@ -125,16 +127,16 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.0.2</version>
-				<configuration>
-					<delimiters>
-						<delimiter>@</delimiter>
-					</delimiters>
-					<useDefaultDelimiters>false</useDefaultDelimiters>
-				</configuration>
-			</plugin>
+			<!--<plugin>-->
+				<!--<artifactId>maven-resources-plugin</artifactId>-->
+				<!--<version>3.0.2</version>-->
+				<!--<configuration>-->
+					<!--<delimiters>-->
+						<!--<delimiter>@</delimiter>-->
+					<!--</delimiters>-->
+					<!--<useDefaultDelimiters>false</useDefaultDelimiters>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 		</plugins>
 	</build>
 
