--- a/pom.xml
+++ b/pom.xml
@@ -101,10 +101,8 @@
 			</plugin>
 
 			<plugin>
-				<!--<groupId>org.codehaus.cargo</groupId>-->
-				<!--<artifactId>cargo-maven2-plugin</artifactId>-->
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.codehaus.cargo</groupId>
+				<artifactId>cargo-maven2-plugin</artifactId>
 				<configuration>
 					<container>
 						<!-- 指明使用的tomcat服务器版本 -->
@@ -127,16 +125,16 @@
 				</executions>
 			</plugin>
 
-			<!--<plugin>-->
-				<!--<artifactId>maven-resources-plugin</artifactId>-->
-				<!--<version>3.0.2</version>-->
-				<!--<configuration>-->
-					<!--<delimiters>-->
-						<!--<delimiter>@</delimiter>-->
-					<!--</delimiters>-->
-					<!--<useDefaultDelimiters>false</useDefaultDelimiters>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.0.2</version>
+				<configuration>
+					<delimiters>
+						<delimiter>@</delimiter>
+					</delimiters>
+					<useDefaultDelimiters>false</useDefaultDelimiters>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
