--- a/Gaoxi-Controller/src/main/resources/application.properties
+++ b/Gaoxi-Controller/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.dubbo.application.name=controller-consumer
 spring.dubbo.registry.address=zookeeper://192.168.99.100:2182
 spring.dubbo.scan=com.controller
+
+server.port=8889
