--- a/Gaoxi-User/src/main/resources/application.properties
+++ b/Gaoxi-User/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.dubbo.registry.address=zookeeper://192.168.99.100:2182
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20883
 spring.dubbo.scan=com.user
+
+server.port=8888
