--- a/Gaoxi-User/src/main/webapp/WEB-INF/web.xml
+++ b/Gaoxi-User/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>cn.com.capinfo.zlzy.BxjywebApplication</param-value>
+        <param-value>com.controller.UserApplication</param-value>
     </context-param>
 
     <listener>
